--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "@ionic-native/splash-screen": "4.5.3",
     "@ionic-native/status-bar": "4.5.3",
     "@ionic/pro": "1.0.20",
-    "@ionic/storage": "2.1.3",
+    "@ionic/storage": "^2.1.3",
+    "cordova-android": "~6.3.0",
     "cordova-plugin-device": "^2.0.1",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
     "cordova-plugin-ionic-webview": "^1.1.16",
@@ -35,8 +36,7 @@
     "ionicons": "3.0.0",
     "rxjs": "5.5.7",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.20",
-    "cordova-android": "~6.3.0"
+    "zone.js": "0.8.20"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.8",
